<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:id="@+id/horizontalScrollView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/refresh"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/refresh_button"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/exit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text= "@string/exit_button"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu_process_text"
        android:id="@+id/general_info"
        android:layout_below="@+id/horizontalScrollView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_info_text"
        android:id="@+id/memory_info"
        android:layout_below="@+id/general_info"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_usage_text"
        android:id="@+id/text_field"
        android:layout_below="@+id/memory_info"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/processes_list"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_field" />


</RelativeLayout>
